# gai-code-executor

./: .flake8  Makefile  README.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: test-and-publish.yml
cicd/: buildspec.yml  deployspec-dev.yml  deployspec-prod.yml  deployspec-qa.yml
serverless/: Dockerfile.execute  Makefile  requirements-ai.txt  requirements.txt  serverless.yml
serverless/src/functions/: execute.py  execute_request.py  execution_status.py
serverless/src/utils/: bandit_manager.py  executor.py  s3_file_downloader.py  utils.py
serverless/test/: test_coverage.py  test_utils.py
serverless/test/fixtures/bandit_failure/: code.py  expected_output.txt
serverless/test/fixtures/cafe/: code.py  expected_output.txt
serverless/test/fixtures/class/: code.py  console.txt
serverless/test/fixtures/code_error/: code.py  expected_output.txt
serverless/test/fixtures/fruitpicker/: code.py  expected_output.txt
serverless/test/fixtures/function_call/: code.py  expected_output.txt
serverless/test/fixtures/helloworld/: code.py
serverless/test/fixtures/http_request/: code.py
serverless/test/fixtures/nested_function/: code.py
serverless/test/fixtures/nmt/: code.py  console.txt  expected_output.txt
serverless/test/fixtures/nmt/translation.tf/: fingerprint.pb  saved_model.pb
serverless/test/fixtures/nmt/translation.tf/variables/: variables.data-00000-of-00001  variables.index
serverless/test/fixtures/no_result/: code.py  expected_output.txt
serverless/test/fixtures/planes/: code.py  expected_output.txt
serverless/test/fixtures/print_statements/: code.py  console.txt
serverless/test/fixtures/wine/: code.py  console.txt
tools/: poetry_ensure_installed.sh
