[tool.poetry]
name = "gai-code-executor"
version = "1.0.0"
description = "run user defined python code in a contained environment"
authors = []

[tool.poetry.dependencies]
python = "~3.11"
flake8 = "^6.1.0"
black = "^23.9.1"
mypy = "^1.5.1"
licenseheaders = {git = "https://github.com/kycarr/licenseheaders.git"}
pep8-naming = "^0.13.3"
tqdm = "^4.66.1"
joblib = "^1.3.2"
regex = "^2023.8.8"
sentry-sdk = "^1.31.0"
tomlkit = "^0.12.1"
blinker = "^1.6.2"

[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
