[tool.poetry]
name = "gai-code-executor"
version = "0.1.0"
description = ""
authors = ["Daniel Auerbach <auerbach@ict.usc.edu>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "~3.11"
sentry-sdk = "^1.31.0"
boto3 = "^1.28.60"
boto3-type-annotations = "^0.3.1"
python-dotenv = "^1.0.0"
requests = "^2.31.0"
dataclass-wizard = "^0.22.2"

[tool.poetry.group.lint.dependencies]
pep8-naming = "^0.13.3"
flake8 = "^6.1.0"
black = "^23.9.1"
mypy = "^1.5.1"
tqdm = "^4.66.1"
joblib = "^1.3.2"
regex = "^2023.8.8"
tomlkit = "^0.12.1"
blinker = "^1.6.2"
licenseheaders = {git = "https://github.com/kycarr/licenseheaders.git"}

[tool.poetry.group.ai.dependencies]
scikit-learn = "^1.3.1"
bandit = "^1.7.5"
pandas = "^2.1.3"
nltk = "^3.8.1"
keras = "^2.15.0"
tensorflow = "^2.15.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
coverage = "^7.3.2"
pytest-env = "^1.1.1"
pytest-mock = "^3.12.0"
pytest-only = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
